# iscan

./: AUTHORS  Makefile.am  Makefile.in  NEWS  NEWS.ja  README  README.ja  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  iscan.desktop  iscan.spec  ltmain.sh  ltmain.sh.diff  rpm.spec.in  scm-build.am
backend/: Makefile.am  Makefile.in  backend.c  backend.h  cfg-obj.c  cfg-obj.h  channel-net.c  channel-pio.c  channel-scsi.c  channel-usb.c  channel.c  channel.h  command.c  command.h  defines.h  device.c  device.h  dip-obj.c  dip-obj.h  epkowa.c  epkowa.conf  epkowa.h  epkowa_ip.c  epkowa_ip.h  epkowa_ip_api.h  epkowa_scsi.c  epkowa_scsi.h  extension.h  get-infofile.c  get-infofile.h  hw-data.c  hw-data.h  ipc.c  ipc.h  list.c  list.h  message.c  message.h  model-info.c  model-info.h  (+9 more)
backend/tests/: 45532d48333030.xml  47542d58393730.xml  Makefile.am  Makefile.in  network.c  test-cfg-obj.cc  test-cfg-obj.hh  test-model-info.cc  test-model-info.hh  test-net-obj.cc  test-net-obj.hh  xmltest-runner.sh  xmltest.c  xmltest.h
debian/: changelog  control  control.in  copyright  dll.conf  iscan.docs  iscan.examples  iscan.menu  iscan.postinst.in  iscan.postrm.in  iscan.preinst.in  iscan.prerm.in  rules
doc/: Makefile.am  Makefile.in  iscan-registry.man  iscan.man  sane-epkowa.man  xinetd.sane
frontend/: Makefile.am  Makefile.in  esmod-wrapper.hh  file-selector.cc  file-selector.h  gimp-plugin.h  pisa_aleart_dialog.cc  pisa_aleart_dialog.h  pisa_change_unit.cc  pisa_change_unit.h  pisa_configuration.cc  pisa_configuration.h  pisa_default_val.h  pisa_enums.h  pisa_error.cc  pisa_error.h  pisa_esmod_structs.h  pisa_gamma_correction.cc  pisa_gamma_correction.h  pisa_gimp.cc  pisa_gimp.h  pisa_gimp_1_0_patch.h  pisa_image_controls.cc  pisa_image_controls.h  pisa_img_converter.cc  pisa_img_converter.h  pisa_main.cc  pisa_main.h  pisa_main_window.cc  pisa_main_window.h  pisa_marquee.cc  pisa_marquee.h  pisa_preference.cc  pisa_preference.h  pisa_preview_window.cc  pisa_preview_window.h  pisa_progress_window.cc  pisa_progress_window.h  pisa_sane_scan.cc  pisa_sane_scan.h  (+15 more)
include/sane/: sanei_magic.h  sanei_scsi.h  sanei_usb.h
lib/: Makefile.am  Makefile.in  basic-imgstream.cc  basic-imgstream.hh  fax-encoder.cc  fax-encoder.hh  file-opener.cc  file-opener.hh  imgstream.cc  imgstream.hh  jpegstream.cc  jpegstream.hh  pcxstream.cc  pcxstream.hh  pdfstream.cc  pdfstream.hh  pngstream.cc  pngstream.hh  pnmstream.cc  pnmstream.hh  tiffstream.cc  tiffstream.hh
lib/pdf/: Makefile.am  Makefile.in  array.cc  array.hh  dictionary.cc  dictionary.hh  object.cc  object.hh  primitive.cc  primitive.hh  writer.cc  writer.hh
lib/tests/: Makefile.am  Makefile.in  even-width.pbm  even-width.pgm  even-width.ppm  odd-width.pbm  odd-width.pgm  odd-width.ppm  pnm.c  pnm.h  run-test-pcx.sh  test-pcx.cc
m4/: scm-build.m4
non-free/: AVASYSPL.en.txt  AVASYSPL.ja.txt  Makefile.am  Makefile.in  checksums.md5  esmod.hh
po/: LINGUAS  Makevars  POTFILES.in  ar.gmo  ar.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  iscan.pot  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nl.gmo  nl.po  pt.gmo  pt.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
sanei/: sanei_config.c  sanei_constrain_value.c  sanei_init_debug.c  sanei_magic.c  sanei_pio.c  sanei_scsi.c  sanei_usb.c
utils/: Makefile.am  Makefile.in  iscan-registry.in
